# infra

./: .gitattributes  .terraform.lock.hcl  README.md  backend.tf  main.tf  mattglei.ch.tf  mattglei.ch.yaml  mattgleich.com.tf  prometheus.yml  pyproject.toml  records.tf  variables.tf  vars.tf
.github/workflows/: deploy.yaml  deploy.yml  lint.yml  terraform.yml
cloudflare/: coverframe.dev.tf  coverframe.shop.tf  gleich.tv.tf  mattglei.ch.tf  mattgleich.com.tf  outdoorfolio.com.tf
config/: prod.yml  production.yaml
hetzner/: server.tf
lab/: Caddyfile  Makefile  docker-compose.yml
modules/cloudflare/: mail.tf  main.tf  records.tf  variables.tf  vercel.tf
modules/cloudflare/coverframe/: records.tf  variables.tf
modules/cloudflare/personal/: records.tf
modules/digitalocean/: droplets.tf
modules/dns/: mattglei.ch.tf  mattgleich.com.tf  records.tf  server.tf  variables.tf  vercel.tf
modules/github/: repos.tf
modules/vercel/: main.tf  projects.tf
terraform/: .terraform.lock.hcl  backend.tf  main.tf  variables.tf
terraform/cloudflare/: mattglei.ch.tf  mattgleich.com.tf
terraform/hetzner/: servers.tf
terraform/modules/cloudflare/: main.tf  pages.tf  rules.tf  variables.tf
terraform/modules/cloudflare/coverframe/: records.tf  variables.tf
terraform/modules/cloudflare/personal/: page_rules.tf  records.tf
terraform/modules/digitalocean/: droplets.tf
