[tool.poetry]
name = "dns"
version = "0.1.0"
description = "📡 DNS configuration"
authors = ["Matt Gleich <git@mattglei.ch>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
octodns = "^0.9.12"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
